Fix navbar overlapping body with padding-top, add jumbotron and button for looks

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,7 +6,12 @@
 html,
 body {
   height: 100%;
+  padding-top: 20px;
   /* The html and body elements cannot have any padding or margin. */
+}
+
+.lorem {
+	padding-top: 20px;
 }
 
 /* Wrapper for page content to push down footer */
